--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,16 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0.38"
+async-trait = "0.1.48"
 dotenv = "0.15.0"
 env_logger = "0.8.3"
+futures = "0.3.13"
+itertools = "0.10.0"
 log = "0.4.14"
-reqwest = { version = "0.10.10", features = ["json"] }
+parking_lot = "0.11.1"
+reqwest = { version = "0.10.10", features = ["json", "rustls-tls"] }
+serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.62"
 slog = "2.7.0"
 teloxide = "0.3.4"
 tokio = { version="0.2.25", features = ["macros", "rt-threaded"]}
-
-[dev-dependencies]
-mockall = "0.9.1"
