set license to MIT in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "virulenbot"
 version = "0.1.0"
 authors = ["Diego Roig <2140622+diegopy@users.noreply.github.com>"]
 edition = "2018"
-license = "Apache-2.0"
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0.39"
