--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,26 +2,21 @@
 name = "virulenbot"
 version = "0.1.0"
 authors = ["Diego Roig <2140622+diegopy@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 
 [dependencies]
-anyhow = "1.0.39"
-async-trait = "0.1.48"
-config = { version = "0.11.0", features = ["toml", "json"], default-features = false }
+anyhow = "1.0.69"
+async-trait = "0.1.66"
+config = { version = "0.13.3", features = ["toml", "json"], default-features = false }
 dotenv = "0.15.0"
-env_logger = "0.8.3"
-futures = "0.3.13"
-itertools = "0.10.0"
-log = "0.4.14"
-parking_lot = "0.11.1"
-reqwest = { version = "0.11.2", features = ["json", "rustls-tls"], default-features = false }
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
-teloxide = { version = "0.4.0", features = ["rustls", "macros"], default-features = false }
-tokio = { version = "1.8.4", features = ["full"] }
-warp = { version = "0.3.0", default-features = false }
-
-[patch.crates-io]
-teloxide-core = { git = "https://github.com/diegopy/teloxide-core.git" }
-teloxide = { git = "https://github.com/diegopy/teloxide.git", branch = 'dev' }
+env_logger = "0.10.0"
+futures = "0.3.26"
+itertools = "0.10.5"
+log = "0.4.17"
+parking_lot = "0.12.1"
+reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.94"
+teloxide = { version = "0.12.2", features = ["rustls", "macros", "webhooks-axum", "ctrlc_handler"], default-features = false }
+tokio = { version = "1.26.0", features = ["full"] }
